[package]
name = "llmproxy"
version = "0.1.9"
edition = "2021"
authors = ["PuQing <me@puqing.work>"]
description = "A simple HTTP proxy server for llm api requests"
license = "MIT"
readme = "README.md"
keywords = ["llm", "proxy", "http"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "llmproxyd"
path = "src/bin/llmproxyd/main.rs"

[[bin]]
name = "llmproxy"
path = "src/bin/llmproxy/main.rs"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.11", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
comfy-table = "7.1.1"
colored = "2.1.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
httptest = "0.16.3"
mime = "0.3.17"
